--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "cypress-intermediario-v2",
+  "name": "cypress-testes-gitlab-intermediario",
   "version": "1.0.0",
-  "description": "Repositório do projeto v2 do curso de testes automatizados com Cypress (intermdiário) da Escola TAT no Udemy",
+  "description": "Repositório do projeto de testes automatizados de API, CLI e GUI com Cypress (intermediário)",
   "main": "cypress.config.js",
   "scripts": {
-    "test": "cypress run"
+    "test": "cypress run",
+    "cy:open": "cypress open"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wlsf82/cypress-intermediario-v2.git"
+    "url": "git+https://github.com/lucasalvares/cypress-testes-gitlab-intermediario.git" 
   },
   "keywords": [
     "Cypress intermediário",
-    "Talking About Testing",
+    "Testes API, CLI e GUI com Cypress",
     "E2E Testing"
   ],
-  "author": "Walmyr Filho <wlsf82@gmail.com> (https://walmyr.dev/)",
-  "license": "MIT",
+  "author": "Lucas Almeida Alvares",
+  "license": "",
   "bugs": {
-    "url": "https://github.com/wlsf82/cypress-intermediario-v2/issues"
+    "url": "https://github.com/lucasalvares/cypress-testes-gitlab-intermediario.git"
   },
-  "homepage": "https://github.com/wlsf82/cypress-intermediario-v2#readme"
+  "homepage": "https://github.com/wlsf82/cypress-intermediario-v2#readme",
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "cypress": "^12.0.2",
+    "cypress-plugin-api": "^2.6.1"
+  }
 }
